2 cluster not good

--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -11,6 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(10000, 24)\n",
       "Time to load all files: 0.010 seconds\n"
      ]
     }
@@ -35,12 +36,13 @@
     "all_data = np.append(signal,bkg,axis=0)\n",
     "\n",
     "current_time = time.time()\n",
+    "print all_data.shape\n",
     "print 'Time to load all files: %1.3f seconds'%(current_time-init_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -49,19 +51,19 @@
     {
      "data": {
       "text/plain": [
-       "KMeans(copy_x=True, init='k-means++', max_iter=300, n_clusters=4, n_init=15,\n",
-       "    n_jobs=1, precompute_distances='auto', random_state=None, tol=0.0001,\n",
+       "KMeans(copy_x=True, init='k-means++', max_iter=500, n_clusters=2, n_init=15,\n",
+       "    n_jobs=1, precompute_distances='auto', random_state=None, tol=0.001,\n",
        "    verbose=0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "kms = KMeans(n_clusters=4, init='k-means++', n_init=15, max_iter=300, tol=0.0001, precompute_distances='auto',\n",
+    "kms = KMeans(n_clusters=2, init='k-means++', n_init=15, max_iter=500, tol=0.001, precompute_distances='auto',\n",
     "             verbose=0, random_state=None, copy_x=True)\n",
     "kms.fit(all_data)\n",
     "#for j in range(all_data.shape[1]):\n",
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -94,8 +96,8 @@
       "=======================================\n",
       "F_0 203658708.105\n",
       "=======================================\n",
-      "F_in 81071734.4907\n",
-      "F_out 122586973.614\n",
+      "F_in 121610665.342\n",
+      "F_out 82048042.7624\n",
       "========================================\n",
       "F_in + F_out 203658708.105\n"
      ]
@@ -104,7 +106,7 @@
    "source": [
     "output = kms.predict(all_data)\n",
     "cluster_list = []\n",
-    "for i in range(4):\n",
+    "for i in range(2):\n",
     "    cluster_list.append(all_data[output==i,:])\n",
     "print '======================================='\n",
     "print 'F_0', ClusterMerits.DispTotal(all_data,ClusterMerits.Baricenter(all_data),media='')\n",
@@ -119,86 +121,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[array([[  8.88992194e-03,  -4.12412977e-04,   5.67766791e-03, ...,\n",
-       "           1.21762311e+00,   1.39726516e+02,   6.15567327e+01],\n",
-       "        [  4.44732159e-02,   0.00000000e+00,   7.22116008e-02, ...,\n",
-       "          -1.23155820e+00,   1.25057570e+02,   4.33235559e+01],\n",
-       "        [  7.04495683e-02,   1.44251147e-02,   6.44110441e-02, ...,\n",
-       "          -1.92413545e+00,   3.56549688e+01,   3.03942245e+01],\n",
-       "        ..., \n",
-       "        [  2.27541644e-02,   1.25240356e-01,   1.66044727e-01, ...,\n",
-       "           1.78996480e+00,   1.20207500e+02,   1.74243960e+01],\n",
-       "        [  3.27443480e-02,   1.87768545e-02,   3.41251232e-02, ...,\n",
-       "          -3.37081313e-01,   1.71266063e+02,   5.28287034e+01],\n",
-       "        [  4.58100811e-02,   0.00000000e+00,   6.66991174e-02, ...,\n",
-       "           1.15951121e+00,   5.25115898e+01,   4.30427466e+01]]),\n",
-       " array([[  5.98841161e-02,   0.00000000e+00,   9.51808691e-02, ...,\n",
-       "          -1.11174643e+00,   2.35005016e+02,   6.26179353e+01],\n",
-       "        [  1.30585432e-02,   3.76276433e-01,   4.47553545e-02, ...,\n",
-       "           7.15867937e-01,   1.34571594e+02,   5.38562245e+01],\n",
-       "        [  1.38822332e-01,   0.00000000e+00,   2.99930125e-02, ...,\n",
-       "           1.08557487e+00,   2.01254672e+02,   5.73032058e+01],\n",
-       "        ..., \n",
-       "        [  5.19145690e-02,   6.05901983e-03,   1.45588160e-01, ...,\n",
-       "           4.47359890e-01,   2.11599375e+02,   7.86187568e+01],\n",
-       "        [  1.32459262e-02,   1.63847342e-01,   3.04962024e-02, ...,\n",
-       "          -6.43998682e-01,   1.26017414e+02,   1.25886157e+02],\n",
-       "        [  1.14463503e-02,   6.19504564e-02,   7.58579969e-02, ...,\n",
-       "           1.64220023e+00,   1.32021484e+02,   1.28448278e+02]]),\n",
-       " array([[  8.95111356e-03,   9.14592529e-05,   8.82276613e-03, ...,\n",
-       "           1.25087190e+00,   1.45795547e+02,   4.97765697e+01],\n",
-       "        [  4.65840027e-02,   0.00000000e+00,   6.41999841e-02, ...,\n",
-       "          -2.85212016e+00,   3.32088281e+02,   5.52981257e+01],\n",
-       "        [  5.95427677e-02,   0.00000000e+00,   7.45076761e-02, ...,\n",
-       "           7.77278721e-01,   7.94920234e+01,   3.38788058e+01],\n",
-       "        ..., \n",
-       "        [  1.76508520e-02,   3.33728194e-02,   3.26679796e-02, ...,\n",
-       "          -2.91938806e+00,   7.31243516e+01,   2.55390323e+01],\n",
-       "        [  7.96728134e-02,   0.00000000e+00,   2.31242612e-01, ...,\n",
-       "           6.49076045e-01,   7.75664766e+01,   1.22394336e+01],\n",
-       "        [  1.62867695e-01,   0.00000000e+00,   9.07583237e-02, ...,\n",
-       "           1.51579857e+00,   2.97305875e+02,   4.64725550e+01]]),\n",
-       " array([[  9.52196307e-03,   6.12077856e-05,   1.65209174e-02, ...,\n",
-       "           1.78017831e+00,   1.07602320e+02,   5.98104895e+01],\n",
-       "        [  7.33271688e-02,   2.10657850e-01,   1.94448568e-02, ...,\n",
-       "           4.06397700e-01,   9.53529609e+01,   4.05002148e+01],\n",
-       "        [  6.67731604e-03,  -1.27103808e-03,   3.44947651e-02, ...,\n",
-       "           5.52077711e-01,   6.94544063e+01,   5.19577457e+01],\n",
-       "        ..., \n",
-       "        [  3.10731605e-02,   9.44766253e-02,   5.57038151e-02, ...,\n",
-       "          -4.70498294e-01,   7.21593594e+01,   7.10143873e+01],\n",
-       "        [  1.20626586e-02,  -3.67927219e-04,   1.23472596e-02, ...,\n",
-       "          -7.76160121e-01,   6.25508281e+01,   6.25409974e+01],\n",
-       "        [  1.13103986e-02,   1.36660472e-01,   8.34356099e-02, ...,\n",
-       "          -6.43940508e-01,   6.90702891e+01,   6.55010960e+01]]),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64),\n",
-       " array([], shape=(0, 24), dtype=float64)]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8042, 24)\n",
+      "===================\n",
+      "(3970, 24)\n",
+      "(1030, 24)\n",
+      "=====================\n",
+      "(4072, 24)\n",
+      "(928, 24)\n"
+     ]
     }
    ],
    "source": [
-    "cluster_list"
+    "print cluster_list[0].shape\n",
+    "print '==================='\n",
+    "otp1 = kms.predict(signal)\n",
+    "otp2 = kms.predict(TTbar)\n",
+    "print signal[otp1==0,:].shape\n",
+    "print signal[otp1==1,:].shape\n",
+    "print '====================='\n",
+    "print TTbar[otp2==0,:].shape\n",
+    "print TTbar[otp2==1,:].shape"
    ]
   },
   {
