--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "# Make a correlation between all variables"
+    "# Make a correlation between all variables, scater plot too"
    ]
   },
   {
