New results kmeans

--- a/kmeansClustering.ipynb
+++ b/kmeansClustering.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 4.05 µs\n"
+      "Wall time: 5.01 µs\n"
      ]
     },
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,18 +68,10 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 5.96 µs\n"
+      "Wall time: 4.05 µs\n",
+      "data antes (10000, 24)\n",
+      "data depois (10000, 23)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1.,  1.,  1., ...,  0.,  0.,  0.])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -87,24 +79,24 @@
     "%time\n",
     "data_path = '/home/micael/MyWorkspace/DATA'\n",
     "path_tosave = data_path+'/'+'Plots'\n",
+    "\n",
     "signal = np.load(data_path+'/'+'lvbb125Matrix.npy')[0:5000,:]\n",
-    "signal_scd = preprocessing.scale(signal)\n",
-    "signal_part = np.load(data_path+'/'+'lvbb125Matrix.npy')[0:250,:]\n",
     "signal_trgt = np.ones(signal.shape[0])\n",
     "\n",
     "\n",
     "ttbar = np.load(data_path+'/'+'TTbarMatrix.npy')\n",
-    "ttbar_scd = preprocessing.scale(ttbar)\n",
-    "ttbar_part = np.load(data_path+'/'+'TTbarMatrix.npy')[0:250,:]\n",
     "bkg = ttbar\n",
     "bkg_trgt = np.zeros(bkg.shape[0])\n",
     "\n",
     "data = np.append(signal,bkg,axis=0)\n",
-    "data_scd = np.append(signal_scd,ttbar_scd,axis=0)\n",
+    "print 'data antes', data.shape\n",
+    "data = np.delete(data,11,axis=1)\n",
+    "print 'data depois',data.shape\n",
     "\n",
-    "little_data = np.append(signal_part,ttbar_part,axis=0)\n",
     "\n",
-    "norm_factor = np.load(data_path+'/'+'desvio_variaveis.npy')\n",
+    "\n",
+    "\n",
+    "#norm_factor = np.load(data_path+'/'+'desvio_variaveis.npy')\n",
     "\n",
     "trgt = np.append(signal_trgt,bkg_trgt,axis=0)#signal_scd\n",
     "trgt2 = trgt[:,np.newaxis] \n",
@@ -112,8 +104,7 @@
     "#sinal_e_trgt.shape\n",
     "#signal.shape\n",
     "#sinal_e_trgt[:,24]\n",
-    "data_trgt = np.append(data,trgt2,axis=1)\n",
-    "data_trgt[:,24]"
+    "data_trgt = np.append(data,trgt2,axis=1)\n"
    ]
   },
   {
@@ -663,23 +654,23 @@
     "\n",
     "Acc_par = np.zeros([n_folds,len(range(2,max_clusters))])\n",
     "SP_par = np.zeros([n_folds,len(range(2,max_clusters))])\n",
-    "Sil_par = np.zeros([n_folds,len(range(2,max_clusters))])\n",
+    "Sil = np.zeros([n_folds,len(range(2,max_clusters))])\n",
     "\n",
     "F_in = np.zeros([n_folds,len(range(2,max_clusters))])\n",
     "F_out = np.zeros([n_folds,len(range(2,max_clusters))])\n",
     "\n",
     "Acc_final = np.zeros([n_folds,len(range(2,max_clusters))])\n",
     "SP_final = np.zeros([n_folds,len(range(2,max_clusters))])\n",
-    "Sil_final = np.zeros([n_folds,len(range(2,max_clusters))])\n",
+    "#Sil_final = np.zeros([n_folds,len(range(2,max_clusters))])\n",
     "Acc_score_final = np.zeros([n_folds,len(range(2,max_clusters))])\n",
     "\n",
     "print range(2,max_clusters)\n",
-    "Acc_final.shape,SP_final.shape,Sil_final.shape,F_in.shape,F_out.shape\n"
+    "Acc_final.shape,SP_final.shape,Sil.shape,F_in.shape,F_out.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -687,21 +678,7 @@
      "output_type": "stream",
      "text": [
       "================================= 2 ===========================================\n",
-      "Processing: Fold 1 of 10 Init 1 of 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "functions/ClusterMerits.py:16: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  if (media == 'm'):\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing: Fold 1 of 10 Init 1 of 1\n",
       "Processing: Fold 2 of 10 Init 1 of 1\n",
       "Processing: Fold 3 of 10 Init 1 of 1\n",
       "Processing: Fold 4 of 10 Init 1 of 1\n",
@@ -827,18 +804,112 @@
    "source": [
     "for icluster in range(2,max_clusters):\n",
     "    print '=================================',icluster,'==========================================='\n",
-    "    if icluster == 2:\n",
-    "        CVO = cross_validation.StratifiedKFold(trgt,n_folds)\n",
-    "        CVO = list(CVO)\n",
+    "    CVO = cross_validation.StratifiedKFold(trgt,n_folds)\n",
+    "    CVO = list(CVO)\n",
     "        \n",
-    "        classifiers = {}\n",
-    "        for ifold in range(n_folds):\n",
-    "            train_id, test_id = CVO[ifold]\n",
-    "            for i_init in range(n_inits):\n",
-    "                print ('Processing: Fold %i of %i Init %i of %i'%(\n",
-    "                    ifold+1, n_folds, \n",
-    "                    i_init+1, n_inits)) \n",
+    "    classifiers = {}\n",
+    "    for ifold in range(n_folds):\n",
+    "        train_id, test_id = CVO[ifold]\n",
+    "        for i_init in range(n_inits):\n",
+    "            print ('Processing: Fold %i of %i Init %i of %i'%(\n",
+    "                ifold+1, n_folds, \n",
+    "                i_init+1, n_inits)) \n",
+    "                \n",
+    "            little_data = np.append(data[train_id][trgt[train_id]==1][0:100,:],data[train_id][trgt[train_id]==0][0:100,:],axis=0)\n",
+    "            var_std = np.zeros(little_data.shape[1])\n",
+    "            for k in range(little_data.shape[1]):\n",
+    "                for i in range(little_data.shape[0]-1):\n",
+    "                    for j in range(little_data.shape[0]):\n",
+    "                        dist0 = little_data[i,k]-little_data[j,k]\n",
+    "                        dataBuffer0 = np.array([dist0])\n",
+    "                        if i==0:\n",
+    "                            data0 = dataBuffer0\n",
+    "                        else:\n",
+    "                            data0 = np.append(data0,dataBuffer0, axis=0)\n",
+    "                #print (np.std(data[:,k])-(np.std(data0)/np.sqrt(2)))\n",
+    "                var_std[k] = (np.std(data0)/np.sqrt(2))\n",
+    "                \n",
+    "            norm_data = preprocessing.scale(data,with_std=False)\n",
     "\n",
+    "            for i in range(norm_data.shape[1]):\n",
+    "                norm_data[:,i] = (1/var_std[i])*norm_data[:,i]\n",
+    "            #print np.mean(norm_data),np.std(norm_data)\n",
+    "            \n",
+    "            km = KMeans(n_clusters=icluster,random_state=0).fit(norm_data[train_id])\n",
+    "            classifiers[ifold]=km\n",
+    "                \n",
+    "            km_output = classifiers[ifold].predict(norm_data)\n",
+    "            \n",
+    "            if icluster==2:\n",
+    "                cluster_list = []\n",
+    "                cluster_list = [norm_data[km_output==0],norm_data[km_output==1]]\n",
+    "                \n",
+    "                Acc_final[ifold,icluster-2] = round(np.mean(ClusterMerits.Acc(km_output[test_id],trgt[test_id])),3)\n",
+    "                Acc_score_final[ifold,icluster-2] = round(metrics.accuracy_score(trgt[test_id],km_output[test_id]),3)\n",
+    "                SP_final[ifold,icluster-2] = round(ClusterMerits.SP(km_output[test_id],trgt[test_id]),3)\n",
+    "                Sil[ifold,0] = round(metrics.silhouette_score(norm_data[test_id],km_output[test_id]),3)\n",
+    "                \n",
+    "                F_in[ifold,icluster-2] = round(ClusterMerits.DispIntraClass(cluster_list),3)\n",
+    "                F_out[ifold,icluster-2] = round(abs(F_in[ifold,icluster-2]-ClusterMerits.DispTotal(norm_data)))\n",
+    "            \n",
+    "            else:\n",
+    "                cluster_list = []\n",
+    "                cluster_list = [norm_data[km_output==i] for i in range(len(np.unique(km_output)))]\n",
+    "                \n",
+    "                F_in[ifold,int(icluster-2)] = round(ClusterMerits.DispIntraClass(cluster_list),3)\n",
+    "                F_out[ifold,int(icluster-2)] = round(abs(F_in[ifold,int(icluster-2)]-ClusterMerits.DispTotal(norm_data)),3)\n",
+    "            \n",
+    "                #Acc_par[ifold,int(icluster/2)] = round(np.mean(ClusterMerits.Acc(knn_output[test_id],new_trgt[test_id])),3)\n",
+    "                #SP_par[ifold,int(icluster/2)] = round(ClusterMerits.SP(knn_output[test_id],new_trgt[test_id]),3)\n",
+    "                Sil[ifold,int(icluster-2)] = round(metrics.silhouette_score(norm_data[test_id],km_output[test_id]),3)\n",
+    "                \n",
+    "                class_final = np.zeros(trgt.shape)\n",
+    "                for i in range(trgt.shape[0]):\n",
+    "                    if sum(trgt[km_output==km_output[i]]==1)/float(sum(km_output==km_output[i])) > 0.5:\n",
+    "                        class_final[i]=1\n",
+    "                    else:\n",
+    "                        class_final[i]=0\n",
+    "                \n",
+    "                Acc_final[ifold,int(icluster-2)] = round(np.mean(ClusterMerits.Acc(class_final[test_id],trgt[test_id])),3)\n",
+    "                Acc_score_final[ifold,int(icluster-2)] = round(metrics.accuracy_score(trgt[test_id],km_output[test_id]),3)\n",
+    "                SP_final[ifold,int(icluster-2)] = round(ClusterMerits.SP(class_final[test_id],trgt[test_id]),3)\n",
+    "                #Sil_final[ifold,int(icluster-2)] = round(metrics.silhouette_score(norm_data[test_id],class_final[test_id]),3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#save results\n",
+    "np.save(data_path+'/'+'KMeans_acc',Acc_final)\n",
+    "np.save(data_path+'/'+'KMeans_acc',Acc_score_final)\n",
+    "np.save(data_path+'/'+'KMeans_SP',SP_final)\n",
+    "np.save(data_path+'/'+'KMeans_Sil',Sil)\n",
+    "np.save(data_path+'/'+'KMeans_Fin',F_in)\n",
+    "np.save(data_path+'/'+'KMeans_Fout',F_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 11)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "                km = KMeans(n_clusters=icluster,random_state=0).fit(norm_data[train_id])\n",
     "                classifiers[ifold]=km\n",
     "                \n",
@@ -898,38 +969,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10, 11)"
+       "array([ 5855.90985569,  5120.63267672,  5398.67242205,  5104.68702386,\n",
+       "        4926.44881223,  4679.69773363,  4586.61762333,  4456.57782293,\n",
+       "        4384.14267664,  4324.18636255,  4204.40965057])"
       ]
      },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F_in.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  3.29342136,   3.87589909,   1.8460466 ,   2.57791723,\n",
-       "         2.57065673,   5.60549575,   7.1963963 ,   4.80981942,\n",
-       "        47.5302809 ,  50.7726597 ,  61.93988662])"
-      ]
-     },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,12 +1026,12 @@
     "    sigma_SP[i] = np.std(SP_final[:,i])\n",
     "\n",
     "# media silhueta \n",
-    "sil_mean = np.zeros([Sil_final.shape[1],])\n",
-    "sigma_sil = np.zeros([Sil_final.shape[1],])\n",
+    "sil_mean = np.zeros([Sil.shape[1],])\n",
+    "sigma_sil = np.zeros([Sil.shape[1],])\n",
     "\n",
     "for i in range(sil_mean.shape[0]):\n",
-    "    sil_mean[i] = np.mean(Sil_final[:,i])\n",
-    "    sigma_sil[i] = np.std(Sil_final[:,i])\n",
+    "    sil_mean[i] = np.mean(Sil[:,i])\n",
+    "    sigma_sil[i] = np.std(Sil[:,i])\n",
     "\n",
     "\n",
     "sigma_Fin"
@@ -988,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1048,7 @@
        "array([ 2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
