--- a/StatisticalAnalysis.ipynb
+++ b/StatisticalAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -40,7 +40,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array done  lvbb125\n"
+      "Array done  Wbb\n",
+      "Array done  Wbl\n",
+      "Array done  Wll\n",
+      "Array done  Wcl\n",
+      "Array done  Wcc\n",
+      "Array done  WW\n",
+      "Array done  WZ\n"
      ]
     }
    ],
@@ -48,8 +54,8 @@
     "from sklearn.externals import joblib\n",
     "#Use ROOT in order to create a numpy array with selected variables\n",
     "\n",
-    "#processes = \"lvbb125,TTbar,Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ,ZZ\"\n",
-    "processes = \"lvbb125\"\n",
+    "processes = \"Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ\"\n",
+    "#processes = \"lvbb125\"\n",
     "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results\"\n",
     "\n",
     "data_path = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet\"\n",
@@ -136,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -147,8 +153,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lvbb125 (5000, 24)\n",
-      "(5000, 6)\n"
+      "Wbb (5000, 24)\n",
+      "Wbl (5000, 24)\n",
+      "Wll (5000, 24)\n",
+      "Wcl (5000, 24)\n",
+      "Wcc (5000, 24)\n",
+      "WW (5000, 24)\n",
+      "WZ (5000, 24)\n"
      ]
     }
    ],
@@ -160,8 +171,8 @@
     "\n",
     "    print process, data_matrix.shape\n",
     "    \n",
-    "signal = np.load(output+\"/\"+\"lvbb125Matrix.npy\")[0:5000,[0,7,11,12,19,23]]\n",
-    "print signal.shape"
+    "#signal = np.load(output+\"/\"+\"lvbb125Matrix.npy\")[0:5000,[0,7,11,12,19,23]]\n",
+    "#print signal.shape"
    ]
   },
   {
